# linux-aiops-agent

./: .env.example  .gitignore  Makefile  README.md  cli.py  pyproject.toml
app/: config.py  main.py
app/api/: aiops.py  chat.py  health.py
app/graphs/: aiops_graph.py
app/mcp/: client.py  manager.py
app/nodes/: executor_node.py  planner_node.py  replanner_node.py  state.py
app/providers/: base.py  deepseek.py  registry.py
app/retrieval/: chroma_store.py  embeddings.py  hybrid_retriever.py  reranker.py  splitter.py
app/services/: agent_service.py  aiops_service.py  alert_manager.py  context_manager.py  knowledge_service.py  log_simulator.py  log_watcher.py  prompt_builder.py  rule_engine.py
app/tools/: __init__.py  knowledge_tool.py  time_tool.py
app/utils/: logger.py
docs/: interview-materials.md
knowledge/linux/: cpu-usage.md  disk-usage.md  docker-troubleshooting.md  file-permissions.md  firewall-iptables.md  kernel-tuning.md  log-management.md  memory-usage.md  mysql-troubleshooting.md  network-troubleshooting.md  nginx-troubleshooting.md  process-management.md  service-unavailable.md  slow-response.md  ssh-troubleshooting.md
mcp_servers/: linux_server.py  log_server.py  search_server.py
prompts/: system_prompt.md
scripts/: hybrid_comparison.py  hybrid_comparison_results.json  ingest_knowledge.py  rag_evaluation.py  rag_evaluation_results.json  rag_search_test.py
scripts/evaluation/: evaluation_report.json  evaluator.py  expand_dataset.py  test_dataset.json
