[project]
name = "linux-aiops-agent"
version = "1.0.0"
description = "Linux 服务器智能运维 Agent 系统"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-community>=0.3.0",
    "chromadb>=0.5.0",
    "pydantic-settings>=2.5.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1.0",
    "langchain-chroma>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    "rank-bm25>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "bandit>=1.7.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.setuptools.packages.find]
include = ["app*", "mcp_servers*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
